--- a/index.html
+++ b/index.html
@@ -1,13 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Ismail portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 </head>
+
 <body>
-    
+    <section class="top-banner">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Ismail Rubel</span> World!</h1>
+            <h3>Don't be confused with this image</h3>
+            <p>Hey! I'm totaly new in this web development world. I'm realy excited about that i'm going to made a site
+                . I want to share my social media profile likn via this site. So if any one willing to connect with me
+                than please click on bellow </p>
+            <a class="link-button" target="_blank " href="https://www.linkedin.com/in/ismail-hosen-a93b64133/">Connect
+                with me</a>
+        </div>
+        <div class="half-width">
+            <img src="images/doctor.png" alt="">
+        </div>
+    </section>
 </body>
+
 </html>
